# trustmdns-test

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
responder/: Cargo.toml
responder/src/: main.rs
